# rvrs-lang

./: .gitignore  LICENSE  README.md  cabal.project  dev-log.md  rvrs-lang.cabal  📄
app/: Main.hs  RunAll.hs  RunEngine.hs  RunIRTests.hs  TestLower.hs  TestTypeCheck.hs  TestTypeCheckNegative.hs  TestTypeCheckStmt.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/: 00_intro.md  01_Prelude_of_Rituals.md  02_roadmap.md  03_syntax.md  04_testing.md  05_module-map.md  06_dev-log.md  07_contributions.md  08_styleguide.md  Prelude_of_Rituals.md  dev-log.md  module-map.md  syntax.md  testing.md
examples/: flowArgs_test.rvrs  full_test.rvrs  grant_access.rvrs  main.rvrs  mood_chooser.rvrs  mood_chooser_v1.rvrs  sanity_test.rvrs  scope_test.rvrs  source_test.rvrs  test.rvrs
examples/core/: arg_bind_test.rvrs
examples/edge_cases/: assert_test.rvrs  shadowing.rvrs  weird_math.rvrs  whisper_test.rvrs
examples/poetic/: rvrs.rvrs
examples/transpilation/: README.md  branch.aiken  branch.rvrs  callFlow.aiken  callFlow.rvrs  simple.aiken  simple.rvrs  typedSource.aiken  typedSource.rvrs
legacy/: MiniMain.hs  MiniParser.hs
rvrs-lang/dist-newstyle/cache/: config  plan.json
rvrs-lang/src/RVRS/: AST.hs  Codegen.hs
src/RVRS/: AST.hs  Checker.hs  Codegen.hs  Engine.hs  Env.hs  Eval.hs  EvalIR.hs  IR.hs  Lower.hs  Parser.hs  Pretty.hs  Syntax.hs  TypeCheck.hs  Types.hs  Utils.hs  Value.hs
src/RVRS/Eval/: CallFlowOnly.hs  Eval.hs  EvalExpr.hs  EvalFlow.hs  EvalStmt.hs  Expr.hs  Flow.hs  SharedExpr.hs  Stmt.hs  Types.hs
src/RVRS/Parser/: ExprParser.hs  Expression.hs  Imports.hs  Statement.hs  StmtParser.hs  Type.hs
src/RVRS/Syntax/: Expression.hs  Identifier.hs  Operation.hs  Primitive.hs  Statement.hs
src/RVRS/Typecheck/: Check.hs  Stmt.hs  Types.hs
src/Ya/: Conversion.hs  Instances.hs  README.md
stdlib/: stdlib.rvrs
tests/: README.md  RunAll.hs  RunIRTests.hs  debug_test.rvrs
tests/core/: arg_bind_test.rvrs  math_test.rvrs  source_test.rvrs
tests/edge_cases/: arg_mismatch.rvrs  shadowing.rvrs  whisper_test.rvrs
tests/engine/: basic_eval.rvrs  return_early.rvrs
tests/flows/: grant_access.rvrs
tests/ir/: ir_assert_fail.rvrs  ir_stdlib_test.rvrs
tests/legacy/edge_cases/: arg_mismatch.rvrs  assert_test.rvrs  empty_call.rvrs  weird_math.rvrs  whisper_test.rvrs
tests/legacy/ir/: ir_assert_fail.rvrs  ir_control_test.rvrs  ir_eval_test.rvrs  ir_stdlib_test.rvrs  ir_synonyms_test.rvrs
tests/legacy/rvrs/core/: decimal_test.rvrs  scope_test.rvrs  stdlib_merge_check.rvrs  type_anno_test.rvrs
tests/legacy/rvrs/typecheck/: type_check_delta_pass.rvrs  type_check_source_fail.rvrs
tests/legacy/syntax/: ceremony_test.rvrs
tests/poetic/: rvrs.rvrs
tests/rvrs/: debug_test.rvrs
tests/rvrs/core/: decimal_test.rvrs  shadowing_test.rvrs  stdlib_full_test.rvrs
tests/rvrs/regression/: full_test.rvrs  return_leak_prevented.rvrs
tests/rvrs/typecheck/: type_check_add_type_mismatch.rvrs  type_check_call_success.rvrs  type_check_call_wrong_arity.rvrs  type_check_call_wrong_type.rvrs  type_check_delta_fail.rvrs  type_check_equals_mismatch.rvrs  type_check_source_fail.rvrs  type_check_source_pass.rvrs
tests/syntax/: speaks_test.rvrs
