cabal-version:       >=1.10
name:                rvrs-lang
version:             0.1.0.0
build-type:          Simple

-- === Library: rvrs-lang ===
library
  exposed-modules:
      RVRS.AST
    , RVRS.Typecheck.Check
    , RVRS.Typecheck.Types
  other-modules:
      RVRS.Codegen
    , RVRS.Parser
    , RVRS.Parser.ExprParser
    , RVRS.Parser.StmtParser
    , RVRS.Parser.Type
    , RVRS.Eval
    , RVRS.Pretty
    , RVRS.Value
    , RVRS.Lower
    , RVRS.Env
    , RVRS.Utils
    , Ya.Conversion
    , Ya.Instances
  hs-source-dirs:      src
  build-depends:
      base >=4.14 && <5
    , containers
    , ya
    , megaparsec
    , text
    , prettyprinter
    , parser-combinators
    , mtl
  default-language:    Haskell2010
  default-extensions:
    ScopedTypeVariables
    StandaloneDeriving
    PatternSynonyms
    LambdaCase
    TypeApplications
    TypeOperators



-- === Executable: rvrs ===
executable rvrs
  main-is:             Main.hs
  hs-source-dirs:      app, src
  other-modules:
      RVRS.AST
    , RVRS.Codegen
    , RVRS.Parser
    , RVRS.Parser.ExprParser
    , RVRS.Parser.StmtParser
    , RVRS.Parser.Type
    , RVRS.Eval
    , RVRS.Pretty
    , RVRS.Value
    , RVRS.Lower
    , RVRS.Env
    , RVRS.Utils
    , RVRS.Typecheck.Check
    , RVRS.Typecheck.Types
    , Ya.Conversion
    , Ya.Instances

  build-depends:
      base >=4.14 && <5
    , text
    , megaparsec
    , prettyprinter
    , parser-combinators
    , containers
    , mtl
    , ya

  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    ScopedTypeVariables
    StandaloneDeriving
    PatternSynonyms
    TypeApplications
    TypeOperators

-- === Executable: RunAll ===
executable RunAll
  main-is:             RunAll.hs
  hs-source-dirs:      app, src
  other-modules:
      RVRS.AST
    , RVRS.Codegen
    , RVRS.Parser
    , RVRS.Parser.ExprParser
    , RVRS.Parser.StmtParser
    , RVRS.Parser.Type
    , RVRS.Eval
    , RVRS.Pretty
    , RVRS.Value
    , RVRS.Lower
    , RVRS.Env
    , RVRS.Utils
    , RVRS.Typecheck.Check
    , RVRS.Typecheck.Types
    , Ya.Conversion
    , Ya.Instances

  build-depends:
      base >=4.14 && <5
    , text
    , megaparsec
    , prettyprinter
    , parser-combinators
    , containers
    , directory
    , filepath
    , process
    , mtl
    , ya

  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    ScopedTypeVariables
    StandaloneDeriving
    PatternSynonyms
    TypeApplications
    TypeOperators

-- === Executable: TestLower ===
executable TestLower
  main-is:             TestLower.hs
  hs-source-dirs:      app, src
  other-modules:
      RVRS.AST
    , RVRS.Codegen
    , RVRS.Parser
    , RVRS.Parser.ExprParser
    , RVRS.Parser.StmtParser
    , RVRS.Parser.Type
    , RVRS.Eval
    , RVRS.Pretty
    , RVRS.Value
    , RVRS.Lower
    , RVRS.Env
    , RVRS.Utils
    , RVRS.Typecheck.Check
    , RVRS.Typecheck.Types
    , Ya.Conversion
    , Ya.Instances

  build-depends:
      base >=4.14 && <5
    , text
    , megaparsec
    , prettyprinter
    , parser-combinators
    , containers
    , mtl
    , ya

  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    ScopedTypeVariables
    StandaloneDeriving
    PatternSynonyms
    TypeApplications
    TypeOperators

-- === Executable: RunIRTests ===
executable RunIRTests
  main-is:             RunIRTests.hs
  hs-source-dirs:      app, src
  other-modules:
      RVRS.AST
    , RVRS.Codegen
    , RVRS.Parser
    , RVRS.Parser.ExprParser
    , RVRS.Parser.StmtParser
    , RVRS.Parser.Type
    , RVRS.Eval
    , RVRS.Pretty
    , RVRS.Value
    , RVRS.Lower
    , RVRS.Env
    , RVRS.Utils
    , RVRS.Typecheck.Check
    , RVRS.Typecheck.Types
    , Ya.Conversion
    , Ya.Instances

  build-depends:
      base >=4.14 && <5
    , text
    , megaparsec
    , prettyprinter
    , parser-combinators
    , containers
    , directory
    , filepath
    , process
    , mtl
    , ya

  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    ScopedTypeVariables
    StandaloneDeriving
    PatternSynonyms
    TypeApplications
    TypeOperators

-- === Executable: TestTypeCheck ===
executable TestTypeCheck
  main-is:             TestTypeCheck.hs
  hs-source-dirs:      app, src
  other-modules:
      RVRS.AST
    , RVRS.Typecheck.Check
    , RVRS.Typecheck.Types
    , RVRS.Parser.Type
    , Ya.Conversion
    , Ya.Instances

  build-depends:
      base >=4.14 && <5
    , text
    , containers
    , megaparsec
    , prettyprinter
    , parser-combinators
    , mtl
    , HUnit
    , ya

  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    ScopedTypeVariables
    StandaloneDeriving
    PatternSynonyms
    TypeApplications
    TypeOperators

-- === Executable: TestTypeCheckNegative ===
executable testtypechecknegative
  main-is:             TestTypeCheckNegative.hs
  hs-source-dirs:      app, src
  other-modules:
      RVRS.AST
    , RVRS.Parser.Type
    , RVRS.Typecheck.Check
    , RVRS.Typecheck.Types
    , Ya.Instances
  build-depends:
      base >=4.14 && <5
    , containers
    , HUnit
    , ya
    , megaparsec
  default-language:    Haskell2010
  default-extensions:
    ScopedTypeVariables
    StandaloneDeriving
    PatternSynonyms
    TypeApplications
    TypeOperators
