cabal-version:       2.2
name:                rvrs-lang
version:             0.1.0.0
build-type:          Simple

-- === Common Settings ===
common base-settings
  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    PatternSynonyms
    ScopedTypeVariables
    StandaloneDeriving
    QuantifiedConstraints
    TypeApplications
    TypeOperators
    OverloadedLists
    OverloadedStrings

common rvrs-deps
  build-depends:
      base >=4.14 && <5
    , text
    , megaparsec
    , prettyprinter
    , parser-combinators
    , containers
    , mtl
    , ya
    , ya-world
    , ya-ascii
    , ya-literal

common app-settings
  import: base-settings, rvrs-deps
  hs-source-dirs: app, src

common lib-settings
  import: base-settings, rvrs-deps
  hs-source-dirs: src

common extra-deps
  build-depends:
    directory, filepath, process

common hunit-deps
  build-depends:
    HUnit

-- === Library ===
library
  import: lib-settings
  exposed-modules:
      RVRS.AST
  other-modules:
      RVRS.Codegen
    , RVRS.Parser
    , RVRS.Checker
    , RVRS.Parser.ExprParser
    , RVRS.Parser.StmtParser
    , RVRS.Parser.Type
    , RVRS.Engine
    , RVRS.Eval
    , RVRS.Pretty
    , RVRS.Value
    , Ya.Conversion
    , Ya.Instances

-- === Executables ===

executable rvrs
  import: app-settings
  main-is: Main.hs
  other-modules:
      RVRS.AST
    , RVRS.Codegen
    , RVRS.Parser
    , RVRS.Checker
    , RVRS.Parser.ExprParser
    , RVRS.Parser.StmtParser
    , RVRS.Parser.Type
    , RVRS.Engine
    , RVRS.Eval
    , RVRS.Pretty
    , RVRS.Value
    , Ya.Conversion
    , Ya.Instances

executable RunAll
  import: app-settings, extra-deps
  main-is: RunAll.hs
  other-modules:
      RVRS.AST
    , RVRS.Codegen
    , RVRS.Parser
    , RVRS.Checker
    , RVRS.Parser.ExprParser
    , RVRS.Parser.StmtParser
    , RVRS.Parser.Type
    , RVRS.Engine
    , RVRS.Eval
    , RVRS.Pretty
    , RVRS.Value
    , Ya.Conversion
    , Ya.Instances

executable RunEngine
  import: app-settings, extra-deps
  main-is: RunEngine.hs
  other-modules:
      RVRS.AST
    , RVRS.Engine
    , RVRS.Parser
    , RVRS.Value

-- executable TestTypeCheck
--   import: app-settings, hunit-deps
--   main-is: TestTypeCheck.hs
--   other-modules:
--       RVRS.AST
--     , RVRS.Parser.Type
--     , RVRS.Checker
--     , RVRS.Value
--     , Ya.Conversion
--     , Ya.Instances

-- executable testtypechecknegative
--   import: app-settings, hunit-deps
--   main-is: TestTypeCheckNegative.hs
--   other-modules:
--       RVRS.AST
--     , RVRS.Checker
--     , RVRS.Parser.Type
--     , RVRS.Value
--     , Ya.Conversion
--     , Ya.Instances
